--- a/src/main/webapp/static/admin/css/style.css
+++ b/src/main/webapp/static/admin/css/style.css
@@ -4838,7 +4838,7 @@ body.modal-open {
     font-size: 180px;
     font-weight: 800;
     letter-spacing: -10px;
-    margin-bottom: 0px;
+    /*margin-bottom: 0px;*/
 }
 
 .middle-box h1 {
